@@ -215,6 +215,7 @@ enum {
 	FUNCTION_ID_REM = 1734,
 	FUNCTION_ID_MOD = 1735,
 	FUNCTION_ID_BERNOULLI = 1740,
+	FUNCTION_ID_TOTIENT = 1745,
 	FUNCTION_ID_RE = 1750,
 	FUNCTION_ID_IM = 1751,
 	FUNCTION_ID_ARG = 1752,
@@ -432,6 +433,7 @@ DECLARE_BUILTIN_FUNCTION(FracFunction, FUNCTION_ID_FRAC)
 DECLARE_BUILTIN_FUNCTION(RemFunction, FUNCTION_ID_REM)
 DECLARE_BUILTIN_FUNCTION(ModFunction, FUNCTION_ID_MOD)
 DECLARE_BUILTIN_FUNCTION(BernoulliFunction, FUNCTION_ID_BERNOULLI)
+DECLARE_BUILTIN_FUNCTION(TotientFunction, FUNCTION_ID_TOTIENT)
 
 DECLARE_BUILTIN_FUNCTION(BinFunction, FUNCTION_ID_BIN)
 DECLARE_BUILTIN_FUNCTION(OctFunction, FUNCTION_ID_OCT)
