@@ -1520,6 +1520,7 @@ void Calculator::addBuiltinFunctions() {
 	f_rem = addFunction(new RemFunction());
 	f_mod = addFunction(new ModFunction());
 	addFunction(new BernoulliFunction());
+	addFunction(new TotientFunction());
 
 	f_polynomial_unit = addFunction(new PolynomialUnitFunction());
 	f_polynomial_primpart = addFunction(new PolynomialPrimpartFunction());
